--- a/webapp/src/views/DeceasedMinisters.scss
+++ b/webapp/src/views/DeceasedMinisters.scss
@@ -64,7 +64,7 @@
     .curtain {
       margin-top: $spacer-md;
       position: sticky;
-      top: 10rem;
+      top: 9rem;
 
       .drapes { padding-top: 1rem; }
       .fringe { height: $spacer-md; }
